* Added checks in builtin functions for very small numbers of observations (mainly for unit tests)
* `addClusterings` applied to two CE objects now gives more arguments about how will copy over the clustering information of one to the other. 
* For sequential clustering, can make `top.can` be fraction between 0 and 1 indicating keep all candidate clusterings that have at least this proportion of the remaining data in the clustering. 
Bugs:
* Fix so export function`getReducedData`
* Fix error in `makeConsensus` was calculating the unassigned proportion in the wrong margin and proportion=1 correctly (matrix inversion problem). 
* Fix bug in `clusterMany` that was not grabbing correct distFunction results. 

Changes in version 2.5.3 (Release date: May 29, 2019)
==============

Changes:
* Made "kmeans" the default in subsampling if data type is "X"
* Set checkDiss=FALSE by default for most all functions (exception is when user defines distance function)
* Add warnings when forced to calculate a nxn distance matrix 
* Improve generic classification to centroids (used by "pam") so not calculate unnecessary distances. 
* Added mbkmeans as built-in cluster function

Bugs:
* Remove bug in built-in cluster function "kmeans" so as to not make unnecessary nxn distance matrix.


Changes in version 2.3.0( Release date: May 3, 2019)
==============

Changes:
* MAJOR CHANGE TO CLASS (1): the dendrogram is now stored in the object as the S4 class `phylo4d` in the package `phylobase`. This allows easier manipulation of the dendrogram by the user (including user-defined dendrograms), as well as allowing storage of information about dendrogram nodes that the programs can make use of. The slot "dendro_outbranch" has been removed because this information is now stored in the `phylo4d` object.
* MAJOR CHANGE TO CLASS (2): the `coClustering` is now stored in the object as a sparse matrix of the S4 class `Matrix` from the package `Matrix`  
* New functions: 