@@ -4,12 +4,15 @@
 \name{rsecFluidigm}
 \alias{rsecFluidigm}
 \alias{makeRsecFluidigmObject}
+\alias{checkRsecFluidigmObject}
 \title{Documentation of rsecFluidigm object}
 \format{\code{rsecFluidigm} is a \code{ClusterExperiment} object, the result
   of running \code{\link{RSEC}} on fluidigm data described in vignette and
   available in the \code{scRNAseq} package.}
 \usage{
 makeRsecFluidigmObject(object)
+
+checkRsecFluidigmObject(object)
 }
 \arguments{
 \item{object}{object given to functions}
